Bug 882200 nsLDAPConnection should only addref the message callback on the main thread r=Standard8